# sopel-http-example

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python-lint.yml
sopel_http_example/: __init__.py
sopel_http_example/templates/: channel.j2
